[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc"
mongodb = "2.3.0"
tokio = { version = "1.0", features = ["full"] }
bson = "2.3.0"
rsa = "0.6.1"
rand = "0.8.5"
pkcs1 = "0.4.0"
pem = "1.1.0"


